# create-repository-script

./: .gitignore  README.md  cmd.py  create_repository.py  main.py  pyproject.toml  requirements.txt
New_repository_package/: __main__.py  config.py  create_repository.py
